--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                 <div class="first_input_img">
                     <img src="./images/icegif-1156.gif" alt="Not Found" >
                 </div>
-                <p>Enter The Between Guess Number 0 - 5</p>
+                <p>Enter The Between Guess Number 0 to 5</p>
+                <!-- <h3 class="chance_main">Chance Remain: <span class="chance">5</span></h3> -->
                 <div class="first_input_btn">
                     <input type="number" placeholder="Enter Your Number" class="inputbox_2">
                     <div class="input_result_box_2"></div>
